[BE] Java16 변경사항 적용: collect(Collectors.toList()) → toList()
참고: https://binux.tistory.com/146